--- a/CC_LAB-6/Jenkinsfile
+++ b/CC_LAB-6/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                 docker run -d \
                   --name nginx-lb \
                   -p 80:80 \
-                  -v $(pwd)/CC_LAB-6/nginx/default.conf:/etc/nginx/conf.d/default.conf \
+                  -v $(pwd)/CC_LAB-6/nginx:/etc/nginx/conf.d \
                   nginx
                 '''
             }
